examples/oc-sp-changes/xds_build_changes/app/envoy/examples/front-proxy/xds/rds/local_http_route.yaml
name: local_http_route
virtual_hosts:
- name: http_service0
  domains:
  - service0.ocenvoy.com
  routes:
  - match: { prefix: /service/1 }
    route: { cluster: service1 }
vhds:
  config_source:
    ads: {}
    resource_api_version: V3
validate_clusters: true
